--- a/src/app/pages/bill/bill.component.html
+++ b/src/app/pages/bill/bill.component.html
@@ -92,7 +92,7 @@
             <h3 class="panel-title">Detalle</h3>
 
             <table class="table table-condensed" *ngIf="items.length > 0">
-                <table class="table table-striped table-bordered" [mfData]="items | search : Search : productos[0]"
+                <table class="table table-striped table-bordered" [mfData]="items | search : Search : items[0]"
                   #mf="mfDataTable" cellspacing="0" width="100%">
                   <thead>
                     <tr>
@@ -101,14 +101,15 @@
                       <th class="text-center" scope="col">Precio unitario</th>
                       <th class="text-center" scope="col">Total</th>
                      
-                     
                     </tr>
                   </thead>
                   <tbody>
                     <tr *ngFor="let item of mf.data; let i = index">
                       <th class="text-center" scope="row">{{ i+1 }}</th>
-                      <td class="text-center">{{item.nombre }}</td>
-                      <td class="text-center">{{item.precio }}</td>
+                      <td class="text-center">{{item.product_id.nombre }}</td>
+                      <td class="text-center">{{item.quantity }}</td>
+                      <td class="text-center">{{item.unit_value }}</td>
+                      <td class="text-center">{{item.item_value }}</td>
                       <td class="text-center">
                         <button type="button" data-dismiss="modal" class="btn btn-secondary fa fa-plus-square" data-toggle="modal"
                           (click)="producto=item;" tooltip="Ver Producto">
@@ -118,38 +119,6 @@
                   </tbody>
                 </table>
               </table>
-
-
-            <table class="table table-condensed">
-              <thead>
-                <tr>
-                  <th class="">Producto</th>
-                  <th class="">Descripción</th>
-                  <th class="">cantidad</th>
-                  <th class="">precio</th>
-                  <th class="">tipo impuesto</th>
-                  <th class="">importe</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td class="">001</td>
-                  <td class="">Doe moe</td>
-                  <td class="">12.00</td>
-                  <td class="">100.00</td>
-                  <td class="">Reducido 7%</td>
-                  <td class="">1200.00</td>
-                </tr>
-                <tr>
-                  <td class="">002</td>
-                  <td class="">Doe moe TURURU</td>
-                  <td class="">10.00</td>
-                  <td class="">1000.00</td>
-                  <td class="">Normal 18%</td>
-                  <td class="">10000.00</td>
-                </tr>
-              </tbody>
-            </table>
           </div> <!-- panel body -->
           <div class="panel-footer">Piefactura
           </div>
